--- a/templates/users/user-base.html
+++ b/templates/users/user-base.html
@@ -276,7 +276,7 @@
 
 
                 </ul>
-               <div class="subNav sublist-down">
+               <!-- <div class="subNav sublist-down">
                    <span class="sublist-icon glyphicon glyphicon-chevron-down"></span>
                    <span class="sub-title">用户管理</span>
                </div>
@@ -296,7 +296,7 @@
                            <span class="sublist-icon glyphicon glyphicon-search"></span>
                            <span class="sublist-title">现有分组</span></a>
                    </li>
-               </ul>
+               </ul> -->
                 <div class="subNav sublist-down">
                     <span class="sublist-icon glyphicon glyphicon-chevron-down"></span>
                     <span class="sub-title">镜像管理</span>
