--- a/templates/users/user-base.html
+++ b/templates/users/user-base.html
@@ -177,8 +177,8 @@
 <!--                            <span class="sublist-icon fa fa-camera"></span>-->
 <!--                            <span class="sublist-title">快照管理</span></a>-->
 <!--                    </li>-->
-                    <li>
-                        <!-- <div class="showtitle" style="width:100px;">虚拟机审核</div> -->
+                    <!-- <li>
+                        <div class="showtitle" style="width:100px;">虚拟机审核，注释我</div>
                         <a href="{% url 'admins:apply_vm' 1 %}">
                             <span>&nbsp;&nbsp;</span>
                             <span class="sublist-icon glyphicon glyphicon-check"></span>
@@ -187,14 +187,14 @@
                         </a>
                     </li>
                     <li>
-                        <!-- <div class="showtitle" style="width:100px;">配置审核</div> -->
+                        <div class="showtitle" style="width:100px;">配置审核,注释我</div>
                         <a href="{% url 'admins:apply_setting' 1 %}">
                             <span>&nbsp;&nbsp;</span>
                             <span class="sublist-icon glyphicon glyphicon-check"></span>
                             <span class="sublist-title">配置审核</span>
                             <span class="label label-info" id="apply_settings"></span>
                         </a>
-                    </li>
+                    </li> -->
 <!--                    <li>-->
 <!--                        &lt;!&ndash; <div class="showtitle" style="width:100px;">端口审核</div> &ndash;&gt;-->
 <!--                        <a href="{% url 'admins:apply_port' 1%}">-->
@@ -205,15 +205,15 @@
 <!--                        </a>-->
 <!--                    </li>-->
 
-                    <li>
-                        <!-- <div class="showtitle" style="width:100px;">端口审核</div> -->
+                    <!-- <li>
+                        <div class="showtitle" style="width:100px;">端口审核，注释我</div>
                         <a href="{% url 'container:docker_verify' 1%}">
                             <span>&nbsp;&nbsp;</span>
                             <span class="sublist-icon glyphicon glyphicon-check"></span>
                             <span class="sublist-title">容器审核</span>
                             <span class="label label-info" id="docker_verifys"></span>
                         </a>
-                    </li>
+                    </li> -->
                     <li>
                         <!-- <div class="showtitle" style="width:100px;">端口审核</div> -->
                         <a href="{% url 'container:container_manage' 1%}">
@@ -252,13 +252,13 @@
                             <span class="sublist-icon glyphicon glyphicon-cloud-upload"></span>
                             <span class="sublist-title">添加容器节点</span></a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <div class="showtitle" style="width:100px;">节点审核</div>
                         <a href="{% url 'admins:apply_node' %}">
                             <span>&nbsp;&nbsp;</span>
                             <span class="sublist-icon glyphicon glyphicon-check"></span>
                             <span class="sublist-title">节点审核</span></a>
-                    </li>
+                    </li> -->
                     <!-- <li>
                         <div class="showtitle" style="width:100px;">级联审核</div>
                         <a href="{% url 'admins:cascade_apply' %}">
