--- a/templates/users/user-base.html
+++ b/templates/users/user-base.html
@@ -129,16 +129,16 @@
 <!--                        <li><a href="{% url 'users:user_info' %}">-->
 <!--                            <i class="fas fa-user mr-2"></i>-->
 <!--                            账号信息</a></li>-->
-                        <li><a href="{% url 'users:logout' %}">
+                        <!-- <li><a href="{% url 'users:logout' %}">
                             <i class="fas fa-power-off mr-2"></i>
-                            退出</a></li>
+                            退出</a></li> -->
                     {% else %}
 <!--                        <li><a href="{% url 'users:user_info' %}">-->
 <!--                            <i class="fas fa-user mr-2"></i>-->
 <!--                            账号信息</a></li>-->
-                        <li><a href="{% url 'users:logout' %}">
+                        <!-- <li><a href="{% url 'users:logout' %}">
                             <i class="fas fa-power-off mr-2"></i>
-                            退出</a></li>
+                            退出</a></li> -->
                     {% endif %}
                 </ul>
             </li>
