--- a/templates/admins/existing_domain.html
+++ b/templates/admins/existing_domain.html
@@ -150,10 +150,10 @@
                                                             <input type="hidden" id="sync_domain" name="is_sync"
                                                                    value={{ domain.id }}>
                                                             <td>
-                                                                <button type="button" class="btn btn-success" id="sync" name="sync">
-                                                                    <span class="glyphicon glyphicon-refresh"></span>
-                                                                    同步
-                                                                </button>
+                                                                // <button type="button" class="btn btn-success" id="sync" name="sync">
+                                                                //     <span class="glyphicon glyphicon-refresh"></span>
+                                                                //     同步
+                                                                // </button>
                                                                 <button type="button" class="btn btn-danger" id="del" name="del">
                                                                     <span class="glyphicon glyphicon-trash"></span>
                                                                     删除
