--- a/templates/container/docker_verify.html
+++ b/templates/container/docker_verify.html
@@ -116,7 +116,7 @@
                                             <thead>
                                             <tr>
                                                 <th >ID</th>
-                                                <th >用户名</th>
+                                                <!-- <th >用户名</th> -->
                                                 <th>DockerId</th>
                                                 <th >容器类型</th>
                                                 <th >挂载点</th>
