--- a/templates/users/vmcheck.html
+++ b/templates/users/vmcheck.html
@@ -109,7 +109,7 @@
                                             <tr>
                                                     <th >实例ID</th>
                                                     <th >虚拟机</th>
-                                                    <th >用户名</th>
+                                                    <!-- <th >用户名</th> -->
                                                     <th >操作系统</th>
                                                     <th >处理器</th>
                                                     <th >内存</th>
