--- a/templates/admins/existing_domain.html
+++ b/templates/admins/existing_domain.html
@@ -126,7 +126,7 @@
                                                 <th class="domain-location">所在地</th>
                                                 <th class="gw-ip">网关地址</th>
                                                 <th class="gw-port">端口</th>
-                                                <th class="gw-user">用户名</th>
+                                                // <th class="gw-user">用户名</th>
                                                 <th class="gw-pwd">密码</th>
                                                 <th class="deploy-time">部署时间</th>
                                                 <th class="sync-time">上次同步时间</th>
@@ -150,10 +150,10 @@
                                                             <input type="hidden" id="sync_domain" name="is_sync"
                                                                    value={{ domain.id }}>
                                                             <td>
-                                                                // <button type="button" class="btn btn-success" id="sync" name="sync">
-                                                                //     <span class="glyphicon glyphicon-refresh"></span>
-                                                                //     同步
-                                                                // </button>
+                                                                <button type="button" class="btn btn-success" id="sync" name="sync">
+                                                                    <span class="glyphicon glyphicon-refresh"></span>
+                                                                    同步
+                                                                </button>
                                                                 <button type="button" class="btn btn-danger" id="del" name="del">
                                                                     <span class="glyphicon glyphicon-trash"></span>
                                                                     删除
