--- a/templates/users/portRecords.html
+++ b/templates/users/portRecords.html
@@ -109,7 +109,7 @@
                                             <tr>
                                                     <th>ID</th>
                                                     <th>虚拟机</th>
-                                                    <th>用户名</th>
+                                                    <!-- <th>用户名</th> -->
                                                     <th>操作系统</th>
                                                     <th>内网地址</th>
                                                     <th>端口</th>
