--- a/templates/admins/vm_apply.html
+++ b/templates/admins/vm_apply.html
@@ -216,7 +216,7 @@
                                             <thead>
                                             <tr>
                                                 <th >ID</th>
-                                                <th >申请用户</th>
+                                                <!-- <th >申请用户</th> -->
                                                 <th >VM_ID</th>
                                                 <th >操作系统</th>
                                                 <th >内存</th>
