--- a/templates/admins/vm_apply_setting.html
+++ b/templates/admins/vm_apply_setting.html
@@ -103,7 +103,7 @@
                                             <thead>
                                             <tr>
                                                 <th >ID</th>
-                                                <th >用户名</th>
+                                                <!-- <th >用户名</th> -->
                                                 <th >虚拟机</th>
                                                 <th >操作系统</th>
                                                 <th >IP</th>
