--- a/templates/admins/vm_apply_port.html
+++ b/templates/admins/vm_apply_port.html
@@ -113,7 +113,7 @@
                                             <thead>
                                             <tr>
                                                 <th class="table-id">ID</th>
-                                                <th >用户名</th>
+                                                <!-- <th >用户名</th> -->
                                                 <th >虚拟机</th>
                                                 <th >操作系统</th>
                                                 <th >区域</th>
