--- a/templates/overview.html
+++ b/templates/overview.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class=" data_bg">
                         <div class="data_bg_item">
-                            <p id="radar_count">个</p><small>雷达数</small>
+                            <p id="radar_count">个</p><small>无人车数</small>
                         </div>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                             <h4 class="modal-title" id="myModalLabel">详细信息</h4>
                         </div>
-                        <div class="modal-body">
+                        <!-- <div class="modal-body">
                             <div id="leida_table" style="display: none">
                                 <table class="table">
                                     <tr>
@@ -256,7 +256,7 @@
                                 </table>
                             </div>
                             <div id="err_info" style="display: none">该服务器暂未获取到详细信息！</div>
-                        </div>
+                        </div> -->
                         <div class="modal-footer">
                             <button type="button" class="btn btn-primary" data-dismiss="modal">确定</button>
                         </div>
@@ -273,7 +273,7 @@
                         </div>
                         <div class="modal-body catebody">
                             <div id="leida_class" class="leida_class">
-                                <div>雷达类别：</div>
+                                <div>无人车类别：</div>
                                 <div id="leida_class_body" class="class_body"></div>
                             </div>
                             <div id="jisuan_class" class="jisuan_class">
@@ -306,63 +306,63 @@
             wuqi_class: [
                 {
                     id: 101,
-                    className: 'A2G_S1机炮',
+                    className: '101',
                 },
                 {
                     id: 102,
-                    className: 'A2G_S2红外近距导弹',
+                    className: '102',
                 },
                 {
                     id: 103,
-                    className: 'A2G_S3红外中距导弹',
+                    className: '103',
                 },
                 {
                     id: 104,
-                    className: 'A2G_M1红外远距导弹',
+                    className: '104',
                 },
                 {
                     id: 105,
-                    className: 'A2G_M2智能炸弹',
+                    className: '105',
                 },
                 {
                     id: 106,
-                    className: 'A2G_L1空空导弹',
+                    className: '106',
                 },
             ],
             leida_class: [
                 {
                     id: 201,
-                    className: 'RD_A1 DAS',
+                    className: '201',
                 },
                 {
                     id: 202,
-                    className: 'RD_A2 光雷',
+                    className: '202',
                 },
                 {
                     id: 203,
-                    className: 'RD_A3 电子战EW',
+                    className: '203',
                 },
                 {
                     id: 204,
-                    className: 'RD_D1 火控雷达',
+                    className: '204',
                 },
                 {
                     id: 205,
-                    className: 'RD_D2 SAR雷达',
+                    className: '205',
                 },
                 {
                     id: 206,
-                    className: 'RD_S1无线通信雷达',
+                    className: '206',
                 },
             ],
             jisuan_class: [
                 {
                     id: 301,
-                    className: 'GPP',
+                    className: '301',
                 },
                 {
                     id: 302,
-                    className: 'VMM',
+                    className: '302',
                 },
             ]
         }
