--- a/templates/vm/virtualhost.html
+++ b/templates/vm/virtualhost.html
@@ -243,38 +243,38 @@
                                 <label>类型：</label>
 								<select data-placeholder="选择类型" name="" id="selectclass">
                                     <option value="">-------选择类型-------</option>
-                                    <option value="1">武器</option>
-                                    <option value="2">雷达</option>
-                                    <option value="3">计算资源</option>
+                                    <option value="1">无人机</option>
+                                    <option value="2">无人车</option>
+                                    <option value="3">无人船</option>
                                 </select>
 								<ul class="restypeul" id="selectchild">
 								       <li class="restypeli">
-								           <select data-placeholder="选择武器型号" id="selected1" class="chosen-select-class" style="display:none">
-								               <option value="">-------选择武器型号-------</option>
-								               <option value="101">101  A2G_S1机炮</option>
-								               <option value="102">102  A2G_S2红外近距导弹</option>
-								               <option value="103">103  A2G_S3红外中距导弹</option>
-								               <option value="104">104  A2G_M1红外远距导弹</option>
-								               <option value="105">105  A2G_M2智能炸弹</option>
-								               <option value="106">106  A2G_L1空空导弹</option>
+								           <select data-placeholder="选择无人机型号" id="selected1" class="chosen-select-class" style="display:none">
+								               <option value="">-------选择无人机型号-------</option>
+								               <option value="101">101</option>
+								               <option value="102">102</option>
+								               <option value="103">103</option>
+								               <option value="104">104</option>
+								               <option value="105">105</option>
+								               <option value="106">106</option>
 								           </select>
 								       </li>
 								       <li class="restypeli">
-								           <select data-placeholder="选择雷达型号" id="selected2" class="chosen-select-class" style="display:none">
-								               <option value="">-------选择雷达型号-------</option>
-								               <option value="201">201  RD_A1 DAS</option>
-								               <option value="202">202  RD_A2 光雷</option>
-								               <option value="203">203  RD_A3 电子战EW</option>
-								               <option value="204">204  RD_D1 火控雷达</option>
-								               <option value="205">205  RD_D2 SAR雷达</option>
-								               <option value="206">206  RD_S1无线通信雷达</option>
+								           <select data-placeholder="选择无人车型号" id="selected2" class="chosen-select-class" style="display:none">
+								               <option value="">-------选择无人车型号-------</option>
+								               <option value="201">201 </option>
+								               <option value="202">202</option>
+								               <option value="203">203</option>
+								               <option value="204">204</option>
+								               <option value="205">205</option>
+								               <option value="206">206</option>
 								           </select>
 								       </li>
 								       <li class="restypeli">
-								           <select data-placeholder="选择计算资源型号" id="selected3" class="chosen-select-class" style="display:none">
-								               <option value="">-------选择计算资源型号-------</option>
-								               <option value="301">301  GPP</option>
-								               <option value="302">302  VMM</option>
+								           <select data-placeholder="选择无人船型号" id="selected3" class="chosen-select-class" style="display:none">
+								               <option value="">-------选择无人船型号-------</option>
+								               <option value="301">301</option>
+								               <option value="302">302</option>
 								           </select>
 								       </li>
                                 </ul>
