--- a/templates/overview.html
+++ b/templates/overview.html
@@ -35,7 +35,7 @@
                 <div class="data_item">
                     <div class="data_bg">
                         <div class="data_bg_item">
-                            <p id="weapon_count">个</p><small>武器数</small>
+                            <p id="weapon_count">个</p><small>无人机数</small>
                         </div>
                     </div>
                     <div class=" data_bg">
@@ -48,7 +48,7 @@
 
                     <div class="data_bg">
                         <div class="data_bg_item">
-                            <p id="compute_resource_count">个</p><small>计算资源</small>
+                            <p id="compute_resource_count">个</p><small>无人车数</small>
                         </div>
                     </div>
                     <div class="data_bg" id="top_left">
@@ -277,11 +277,11 @@
                                 <div id="leida_class_body" class="class_body"></div>
                             </div>
                             <div id="jisuan_class" class="jisuan_class">
-                                <div>计算资源类别：</div>
+                                <div>无人船类别：</div>
                                 <div id="jisuan_class_body" class="class_body"></div>
                             </div>
                             <div id="wuqi_class" class="wuqi_class">
-                                <div>武器类别：</div>
+                                <div>无人机类别：</div>
                                 <div id="wuqi_class_body" class="class_body"></div>
                             </div>
                         </div>
