--- a/templates/admins/vm_apply.html
+++ b/templates/admins/vm_apply.html
@@ -234,7 +234,7 @@
                                                 {% for apply in data %}
                                                     <tr>
                                                         <td>{{ forloop.counter }}</td>
-                                                        <td>{{ apply.username }}</td>
+                                                        <!-- <td>{{ apply.username }}</td> -->
                                                         <td>{{ apply.id }}</td>
                                                         <td>{{ apply.os_version }}</td>
                                                         <td>{{ apply.memory }}G</td>
