--- a/templates/admins/vm_apply.html
+++ b/templates/admins/vm_apply.html
@@ -20,6 +20,7 @@
                 console.log($(this).attr('id'));
                 var btn_id = $(this).attr('id');
                 var vmid = $(this).closest("tr").find("td").eq(1).text();
+                print(vmid)
                 var username = $(this).closest("tr").find("td").eq(1).text();
                 var domain_ip = $(this).closest("tr").find("td").eq(7).text();
                 console.log(domain_ip);
