--- a/templates/admins/vm_apply.html
+++ b/templates/admins/vm_apply.html
@@ -21,7 +21,8 @@
                 var btn_id = $(this).attr('id');
                 var vmid = $(this).closest("tr").find("td").eq(1).text();
                 print(vmid)
-                var username = $(this).closest("tr").find("td").eq(1).text();
+                // var username = $(this).closest("tr").find("td").eq(1).text();
+                var username = "doge"
                 var domain_ip = $(this).closest("tr").find("td").eq(7).text();
                 console.log(domain_ip);
                 if (btn_id == 'apply_vm') {
