--- a/templates/vm/virtualhost.html
+++ b/templates/vm/virtualhost.html
@@ -104,16 +104,16 @@
                 var vm_type = $(".chosen-select-os").find("option:selected").text();
                 var disk = $(".chosen-select-disk").find("option:selected").text();
                 switch (disk) {
-                    case "10":
+                    case "10G":
                         disk = 10;
                         break;
-                    case "20":
+                    case "20G":
                         disk = 20;
                         break;
-                    case "40":
+                    case "40G":
                         disk = 40;
                         break;
-                    case "60":
+                    case "60G":
                         disk = 60;
                         break;
                 }
