--- a/templates/vm/virtualhost.html
+++ b/templates/vm/virtualhost.html
@@ -103,6 +103,7 @@
                 ;
                 var vm_type = $(".chosen-select-os").find("option:selected").text();
                 var disk = $(".chosen-select-disk").find("option:selected").text();
+                print(disk)
                 switch (disk) {
                     case "10G":
                         disk = 10;
